[package]
name = "mahitm_vpn_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
log = "0.4.18"
env_logger = "0.10.0"
dotenv = "0.15.0"
firestore = "0.32"
gcloud-sdk = "0.20.3"
serde = "1.0.164"