[package]
name = "mahitm_vpn_server"
version = "0.0.2"
edition = "2021"
description = "MahitM VPN Server"
license = "MIT"
authors = ["Mahit Mehta"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
log = "0.4.18"
env_logger = "0.10.0"
dotenv = "0.15.0"
firestore = "0.32.2"
gcloud-sdk = "0.20.3"
serde = "1.0.164"
serde_json = "1.0.96"
firebase-token = "0.3.0"
actix-web-lab = "0.19.1"
futures = "0.3.28"
prost = "0.11"
prost-types = "0.11"

[package.metadata.deb]
depends = "wireguard-tools" 
assets = [
    ["target/release/mahitm_vpn_server", "usr/bin/mahitm_vpn_server", "755"],
    ["scripts/debian/*", "var/lib/mahitm_vpn_server/scripts/debian", "755"],
    ["conf/*", "var/lib/mahitm_vpn_server/conf", "644"],
    ["README.md", "var/lib/mahitm_vpn_server/README.md", "644"],
]
maintainer-scripts = "scripts/debian"

[package.metadata.deb.systemd-units]
unit-scripts = "scripts/debian"